--- a/includes/sortable_gallery.css
+++ b/includes/sortable_gallery.css
@@ -3,6 +3,9 @@ body {
 	padding: 20px 10px 20px 30px;
 	font: 14px Arial;
 	color: #fff;
+
+}
+html {
 	background-color: #000;
 }
 p { margin: 0px 0px 1em 0px; }
@@ -22,31 +25,49 @@ a, a:visited { color: #00f; }
 	margin: 0px auto;
 	position: relative;
 }
-.gallery .sorting {margin: 0px 15px 0px 0px; border: 1px solid #cccccc; 
+.gallery .sorting {margin: 0px 15px 0px 0px; border: 1px solid #cccccc;
 	background-color:  rgba(47,79,79, .3);
 }
 
 
-
+/*
 .bottomnav .link {
-	
+
 
 	padding: 3px 20px 3px 20px;
 	float: left;
+}*/
+.footer, .button {
+	background-color: black;
+
 }
-.bottomnav .link a {
-	color: #fff; 
+.footer .container{
+	display: flex;
+	flex-direction: row;
+	cspace-around;
+	/*border: 1px red solid;
+	margin-top: 20px;*/
+	justify-content: center;
+}
+.footer .container div{
+
+	/*border: 1px green solid;*/
+}
+.footer .link a {
+	color: #fff;
 	font-size: .85em;
 	text-decoration: none;
 	text-transform: uppercase;
 	padding: 3px 20px 3px 20px;
+	margin-left: 10px;
+
 }
 
 
 .gallery .sorting span {padding: 0px 20px 0px 0px; color: #cccccc;  font-style: italic;}
 .gallery .sorting div {margin: 10px 0px 10px 10px;}
 .gallery .sorting a {
-	color: #fff; 
+	color: #fff;
 	font-size: .85em;
 	text-decoration: none;
 	text-transform: uppercase;
@@ -57,7 +78,7 @@ a, a:visited { color: #00f; }
 .gallery .sorting a.selected { color: #e5aa2c; background-image: url(../images/checkSelected.gif);}
 .gallery .photos .thumbnail_container {position: relative; }
 .gallery .photos .thumbnail_container a.thumbnail { position: absolute;}
-.gallery .photos .thumbnail_container a.thumbnail img { 
+.gallery .photos .thumbnail_container a.thumbnail img {
 	width: 75px;
 	height:  75px;
 	border: 1px solid #cccccc;
@@ -73,7 +94,7 @@ a, a:visited { color: #00f; }
     height: 16px;
     padding: 4px;
     background: white url(https://github.com/openxe/django-ace/diff_blob/1993c731626a44139b97d2d9fca8f4f4023f107a/django_ace/static/django_ace/img/expand.png?raw=true) center center no-repeat;
-    z-index: 99999;   
+    z-index: 99999;
     cursor: pointer;
 }
 */
@@ -101,10 +122,7 @@ a, a:visited { color: #00f; }
 	.gallery .sorting span { display: block; padding: 0px 0px 20px 0px;}
 	.gallery .sorting a {display: block; width: 35%; float: left; margin-bottom: 5px; }
 }
-@media screen and (min-width: 961px) { 
+@media screen and (min-width: 961px) {
 	.title { background-image: url(../images/title_01.png); }
 	.gallery .sorting span {  padding: 0px 20px 20px 0px;}
 }
-
-
-
